[gd_scene load_steps=7 format=3 uid="uid://bs2im8ok04b5o"]

[ext_resource type="Script" path="res://scripts/cards/card.gd" id="1_8cra6"]
[ext_resource type="FontFile" uid="uid://djn4dvgw8mpda" path="res://assets/fonts/ka1.ttf" id="2_23vh8"]
[ext_resource type="ArrayMesh" uid="uid://b0n7asyc0xrk8" path="res://assets/models/card.obj" id="2_tp88c"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xqsb7"]
size = Vector3(0.910522, 0.0398876, 0.543945)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qqxnr"]
albedo_color = Color(0.901961, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_i088a"]
radius = 0.1
height = 0.5

[node name="card" type="StaticBody3D" groups=["cards"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_8cra6")

[node name="card" type="MeshInstance3D" parent="."]
transform = Transform3D(0.494931, 0, 0, 0, 0.0358521, 0, 0, 0, 0.562295, 0, 0, 0)
mesh = ExtResource("2_tp88c")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00440215, -0.00126705, 0)
shape = SubResource("BoxShape3D_xqsb7")

[node name="name_label" type="Label3D" parent="."]
transform = Transform3D(-1.64167e-08, 0.37557, 1.64167e-08, 0, -1.64167e-08, 0.37557, 0.37557, 1.64167e-08, 7.17596e-16, 0.355405, 0.0381118, 0)
texture_filter = 0
text = "card name"
font = ExtResource("2_23vh8")
font_size = 37

[node name="price_label" type="Label3D" parent="."]
transform = Transform3D(-1.64167e-08, 0.37557, 1.64167e-08, 0, -1.64167e-08, 0.37557, 0.37557, 1.64167e-08, 7.17596e-16, 0.176536, 0.0381118, 0.192774)
texture_filter = 0
text = "0
"
font = ExtResource("2_23vh8")
font_size = 37

[node name="hp_label" type="Label3D" parent="."]
transform = Transform3D(-1.64167e-08, 0.37557, 1.64167e-08, 0, -1.64167e-08, 0.37557, 0.37557, 1.64167e-08, 7.17596e-16, -0.366378, 0.0381118, -0.142313)
texture_filter = 0
text = "0
"
font = ExtResource("2_23vh8")
font_size = 52

[node name="attack_label" type="Label3D" parent="."]
transform = Transform3D(-1.64167e-08, 0.37557, 1.64167e-08, 0, -1.64167e-08, 0.37557, 0.37557, 1.64167e-08, 7.17596e-16, -0.366374, 0.0381118, 0.176852)
texture_filter = 0
text = "0
"
font = ExtResource("2_23vh8")
font_size = 52

[node name="insect_mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.0129628, 0)
material_override = SubResource("StandardMaterial3D_qqxnr")
mesh = SubResource("CapsuleMesh_i088a")

[node name="attack_RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(3, 0, 0)
collision_mask = 2
debug_shape_custom_color = Color(1.97336e-06, 0.592836, 0.522157, 1)
debug_shape_thickness = 3
